main.tf
terraform {

 backend "azurerm" {
 }
}
provider "azurerm" {
  features {}
}
resource "azurerm_resource_group" "TractorAzul" {
  name = var.azurerm_resource_group_name
  location = var.location
}
resource "azurerm_virtual_network" "SubmarinoAmarillo" {
    name                = var.name
    location            = var.location
    resource_group_name = var.resource_group_name
    address_space       = var.address_space
    depends_on = [
      azurerm_resource_group.TractorAzul
    ]
}
resource "azurerm_subnet" "SubSubmarinoAmarillo" {
  name                 = var.azurerm_subnet_name
  resource_group_name  = var.resource_group_name
  virtual_network_name = var.virtual_network_name
  address_prefixes     = var.addres_prefixes
  depends_on = [
    azurerm_virtual_network.SubmarinoAmarillo
  ]
}
resource "azurerm_public_ip" "ip11" {
  name                = var.azurerm_public_ip_name
  location            = var.location
  resource_group_name = var.resource_group_name
  allocation_method   = var.allocation_method
  depends_on = [
    azurerm_subnet.SubSubmarinoAmarillo
  ]
}
resource "azurerm_public_ip" "Server1" {
  name                = var.azurerm_public_ip_name1
  location            = var.location
  resource_group_name = var.resource_group_name
  allocation_method   = var.allocation_method
  depends_on = [
    azurerm_subnet.SubSubmarinoAmarillo
  ]
}
resource "azurerm_public_ip" "Server2" {
  name                = var.azurerm_public_ip_name2
  location            = var.location
  resource_group_name = var.resource_group_name
  allocation_method   = var.allocation_method
  depends_on = [
    azurerm_subnet.SubSubmarinoAmarillo
  ]
}
resource "azurerm_network_security_group" "Coche_Policia" {
  name                = var.azurerm_network_security_group_name
  location            = var.location
  resource_group_name = var.azurerm_resource_group_name
  depends_on = [ azurerm_resource_group.TractorAzul ]

  security_rule {
    name                       = "RDP"
    priority                   = 1000
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "web"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}
resource "azurerm_network_interface" "aviones" {
  for_each = var.servers
  name                = each.value.name
  location            = each.value.location
  resource_group_name = each.value.resource_group_name

  ip_configuration {
    name                          = each.value.name
    subnet_id                     = azurerm_subnet.SubSubmarinoAmarillo.id
    private_ip_address_allocation = each.value.private_ip_address_allocation
    private_ip_address = each.value.private_ip_address_allocation == "Dynamic" ? null : each.value.private_address
    public_ip_address_id          = azurerm_public_ip.ip11.id
  }
}
resource "azurerm_network_interface_security_group_association" "asociacion" {
  for_each = var.servers
  network_interface_id      = azurerm_network_interface.aviones[each.key].id
  network_security_group_id = azurerm_network_security_group.Coche_Policia.id
}
resource "azurerm_storage_account" "camioncisterna" {
  name                     = var.azurerm_storage_account_name
  location                 = var.location
  resource_group_name      = var.resource_group_name
  account_tier             = var.account_tier
  account_replication_type = var.account_replication_type
  depends_on = [ azurerm_resource_group.TractorAzul ]
}
resource "azurerm_windows_virtual_machine" "servers" {
  for_each = var.servers
  name                  = each.key
  admin_username        = each.value.admin_username
  admin_password        = each.value.admin_password
  location              = each.value.location
  resource_group_name   = each.value.resource_group_name
  network_interface_ids = each.value.network_interface_ids
  size                  = each.value.size
  depends_on = [ azurerm_resource_group.TractorAzul ]
  
  os_disk {
    name                 = each.value.os_disk_name
    caching              = var.caching
    storage_account_type = var.storage_account_type
  }

  source_image_reference {
    publisher = each.value.publisher
    offer     = each.value.offer
    sku       = each.value.sku
    version   = each.value.version
  }
}
